# BangEditor

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BangEditor.sln  BangEditor.vcxproj  CMakeLists.txt  README.md
Assets/Icons/: .Brackets.png.import  .Cube.png.import  .CubeMap.png.import  .Eye.png.import  .HairCross.png.import  .Pill.png.import  .Square.png.import  .Step.png.import
Assets/Shaders/: .CommonUIInputColor.glsl.import  .EditorFloor.frag.import  .G_UIInputColorOnlyHue.frag.import  .UIInputColor.frag.import  .UISceneImage.frag.import  .UITextureCubeMapPreview.frag.import  CommonUIInputColor.glsl  EditorFloor.frag  G_UIInputColor.frag  G_UIInputColorOnlyHue.frag  UIInputColor.bushader  UIInputColor.frag  UIInputColorOnlyHue.bushader  UIInputColorOnlyHue.frag  UISceneImage.bushader  UISceneImage.frag  UITextureCubeMapPreview.frag
Assets/Templates/BehaviourTemplates/: .Header.template.import  (+2 more)
Assets/Textures/: .Anchor.png.import  .BackArrow.png.import  .CircleHard.png.import  .ColoredAxes.png.import  .CrashDummy.png.import  .Gear.png.import  .GreenCapsule.png.import  .GreenCube.png.import  .GreenSphere.png.import  .Image.png.import  .Letter.png.import  .PhysicsBall.png.import  .Play.png.import  .PlayWithCircle.png.import  .RightArrowAndBar.png.import  .Sphere.png.import
CMakeIncludes/: .gitignore  CMakeCheckInputParams.cmake  CMakeSetBangProjectRoot.cmake
Compile/: .gitignore
Compile/CompilePackage/: .gitignore  CMakeLists.txt  compilePackage.sh
Scripts/: .clang-format  QtCreatorDebuggingHelpers.py  coverity.sh  createClass.sh  format-code.sh  iwyu.sh  profile.sh  setBangPath.sh
Scripts/BuildPackage/: .gitignore  CMakeLists.txt  buildPackage.sh  copyBinaryDependencies.sh
include/BangEditor/: AESConnectionLine.h  AESConnectionPoint.h  AESNode.h  AESTransitionEntry.h  AIWAnimation.h  AIWAnimatorLayerMask.h  AIWAnimatorStateMachine.h  AIWAsset.h  AIWAsset.tcc  AIWAudioClip.h  AIWBehaviour.h  AIWMaterial.h  AIWMesh.h  AIWModel.h  AIWPhysicsMaterial.h  AIWTexture.h  AIWTextureCubeMap.h  ASMCTransitionConditionInput.h  ASMLayerInput.h  ASMVariableInput.h  AnimatorEditor.h  AnimatorEditorScene.h  AnimatorSMEditor.h  AnimatorSMEditorScene.h  AssetInspectorWidget.h  AssetInspectorWidgetFactory.h  AssetPreviewFactory.h  AssetPreviewFactory.tcc  BangEditor.h  Behaviour.h  BehaviourContainer.h  BehaviourCreator.h  BehaviourManager.h  BehaviourTracker.h  CIWAnimator.h  CIWAudioListener.h  CIWAudioSource.h  CIWBehaviour.h  CIWBehaviourContainer.h  CIWBoxCollider.h  (+193 more)
res/Icons/: .Add.png.import  .AnchoredRect.png.import  .Audio.png.import  .Axes.png.import  .BackArrow.png.import  .Brackets.png.import  .Brush.png.import  .Circle.png.import  .Cube.png.import  .Disk.png.import  .DoubleBar.png.import  .Error.png.import  .Eye.png.import  .File.png.import  .Folder.png.import  .Gear.png.import  .HairCross.png.import  .Image.png.import  .Info.png.import  .Lens.png.import  .Lens.xcf.import  .LensLittle.png.import  .Letter.png.import  .LightBulb.png.import  .Pause.png.import  .Pill.png.import  .Play.png.import  .RightArrowAndBar.png.import  .Rotate.png.import  .Scale.png.import  .Scene.png.import  .Sphere.png.import  .Square.png.import  .Step.png.import  .Stop.png.import  .Sun.png.import  .Translate.png.import  .Warn.png.import  .WhiteSphere.png.import  Lens.xcf
scripts/: clean.sh  compile.sh  compileTargets.sh  createClass.sh  profile.sh  set-bang-path.sh
src/: Behaviour.cpp  BehaviourContainer.cpp  BehaviourCreator.cpp  BehaviourManager.cpp  Console.cpp  EditSceneGameObjects.cpp  Editor.cpp  EditorApplication.cpp  EditorBehaviourManager.cpp  EditorCamera.cpp  EditorClipboard.cpp  EditorComponentFactory.cpp  EditorDialog.cpp  EditorIconManager.cpp  EditorMeshFactory.cpp  EditorPaths.cpp  EditorResources.cpp  EditorScene.cpp  EditorSceneManager.cpp  EditorSettings.cpp  EditorUITab.cpp  EditorWindow.cpp  Explorer.cpp  GameBuilder.cpp  Hierarchy.cpp  IconManager.cpp  Inspector.cpp  Main.cpp  MainGame.cpp  MenuBar.cpp  MenuBarItem.cpp  MenuItem.cpp  RotateGizmo.cpp  RotateGizmoAxis.cpp  ScaleGizmo.cpp  ScaleGizmoAxis.cpp  SceneOpenerSaver.cpp  ScenePlayer.cpp  SceneTab.cpp  SelectionGizmo.cpp  (+9 more)
src/Behaviours/: BehaviourCreator.cpp  BehaviourTracker.cpp  EditorBehaviourManager.cpp
src/Console/: Console.cpp
src/Editor/: EditSceneGameObjects.cpp  Editor.cpp  EditorApplication.cpp  EditorCamera.cpp  EditorDebug.cpp  EditorDialog.cpp  EditorDragDropManager.cpp  EditorFileTracker.cpp  EditorFloor.cpp  EditorIconManager.cpp  EditorPaths.cpp  EditorResources.cpp  EditorSettings.cpp  EditorTextureFactory.cpp  EditorWindow.cpp  GameBuilder.cpp  MenuBar.cpp  MenuItem.cpp  Selection.cpp  SelectionFramebuffer.cpp  Shortcut.cpp  ShortcutManager.cpp  UIContextMenu.cpp  UITabContainer.cpp  UITabHeader.cpp
src/Explorer/: Explorer.cpp  ExplorerEntry.cpp  ExplorerItem.cpp  ExplorerItemFactory.cpp  ModelExplorerItem.cpp  PrefabExplorerItem.cpp
src/Hierarchy/: Hierarchy.cpp  HierarchyItem.cpp
src/Inspector/: CIWBehaviourContainer.cpp  CIWMeshRenderer.cpp  CIWPointLight.cpp  CIWRenderer.cpp  CIWTransform.cpp  CWMeshRenderer.cpp  CWRenderer.cpp  CWTransform.cpp  ComponentInspectorWidget.cpp  ComponentInspectorWidgetFactory.cpp  ComponentWidget.cpp  ComponentWidgetFactory.cpp  FIWMaterial.cpp  FIWTexture.cpp  FileInspectorWidget.cpp  FileInspectorWidgetFactory.cpp  Inspector.cpp  InspectorWidget.cpp  UIInputColor.cpp  UIInputFile.cpp  UIInputVector.cpp
src/Project/: Project.cpp  ProjectManager.cpp  QtProjectManager.cpp
src/Scenes/: EditorScene.cpp  EditorSceneManager.cpp  SceneDebugStats.cpp  SceneOpenerSaver.cpp  ScenePlayer.cpp  SceneTab.cpp  UISceneContainer.cpp
src/SelectionGizmos/: ComponentsSelectionGizmo.cpp  SelectionGizmo.cpp  SelectionGizmosManager.cpp
src/TransformGizmos/: RotateGizmo.cpp  RotateGizmoAxis.cpp  SelectionGizmo.cpp  TransformGizmo.cpp  TransformGizmoAxis.cpp  TranslateGizmo.cpp  TranslateGizmoAxis.cpp
src/UIScene/: UISceneContainer.cpp  UISceneDebugStats.cpp  UISceneEditContainer.cpp  UISceneImage.cpp  UIScenePlayContainer.cpp  UISceneToolbar.cpp
(+249 files in other folders)
